--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -63,6 +63,8 @@ size: build
 
 program: size
 	$(EASYPDKPROG) -n $(DEVICE) write $(OUTPUT).ihx
+erase:
+	$(EASYPDKPROG) -n $(DEVICE) erase
 probe:
 	$(EASYPDKPROG) probe
 
